docs/components/alert/alert.css
.alert {
    display: flex;
    flex-direction: column;

    gap: 0.5rem;

    padding: 0.75rem;
    margin-bottom: 2rem;

    color: white;

    border: 1px solid rgba(0, 0, 0, 0.25);
    border-radius: 5px;
}

.alert .title {
    font-weight: bold;
    font-size: 1.25rem;
}

.alert.alert-info {
    color: #286ac6;
    border-color: #9cc7dd;
    background-color: #ecf4fa;
}

.alert.alert-warn {
    color: #c66228;
    border-color: #ddb69c;
    background-color: #faf0ec;
}

.alert.alert-error {
    color: #c62828;
    border-color: #dd9e9c;
    background-color: #faecee;
}

/* OVERRIDE MARKDOWN */
.alert ul {
    margin: 0 !important;
}

.alert code {
    border: 0 !important;
    border-radius: 5px;

    color: white !important;
    background-color: rgba(0, 0, 0, 0.5) !important;
}

.alert a {
    color: rgb(0, 0, 0) !important;
    text-decoration: underline !important;
    font-style: italic !important;
}

